Add RSA Encryption and Decryption, Add Byte Hex String conversion
Use Java's KeyPairGenerator with RSA algorithm for generating public
and private key.

Use Java's Cipher for encryption and decryption.

Implement a simple byte array to hex string converter, and vice versa.

App now successfully encrypts the contents of edittext, displays in
textview, and then decrypt button converts back again.

The app crashes when string becomes to long i.e. longer than the 1024
keysize. RSA not ideal for encrypting large amounts of data, so an
improvement would be to encrypt the string with standard session key
with symmetric algorithm such as AES, then encrypt the session key
with RSA algorithm, and store the encrypted data and the encrypted AES
key.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
 
     <EditText
-        android:layout_marginTop="@dimen/margin_top_edit_plain_text"
-        android:id="@+id/edit_plain_text"
+        android:layout_marginTop="@dimen/margin_top_edittext_plaintext_input"
+        android:id="@+id/edittext_plain_text_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -27,10 +27,10 @@
         android:text="@string/button_encrypt_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_plain_text" />
+        app:layout_constraintTop_toBottomOf="@id/edittext_plain_text_input" />
 
     <TextView
-        android:id="@+id/text_encrypted"
+        android:id="@+id/textview_encrypted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,10 +45,10 @@
         android:text="@string/button_decrypt_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_encrypted" />
+        app:layout_constraintTop_toBottomOf="@id/textview_encrypted" />
 
     <TextView
-        android:id="@+id/text_decrypted"
+        android:id="@+id/textview_decrypted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
