--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     tools:context="com.vinnorman.encryptiondemo.MainActivity">
 
-
-    <EditText
-        android:layout_marginTop="@dimen/margin_top_edittext_plaintext_input"
-        android:id="@+id/edittext_plain_text_input"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textinputlayout_plain_text_input"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/edit_text_prompt"
-        android:inputType="text"
-        android:text="@string/edit_text_prompt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edittext_plain_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_top_edittext_plaintext_input"
+            android:hint="@string/edit_text_prompt"
+            android:imeOptions="actionDone"
+            android:inputType="text" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/button_encrypt"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="@string/button_encrypt_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edittext_plain_text_input" />
+        app:layout_constraintTop_toBottomOf="@id/textinputlayout_plain_text_input" />
+
+    <TextView
+        android:id="@+id/textview_encrypted_text_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_encrypted_text"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_encrypt" />
 
     <TextView
         android:id="@+id/textview_encrypted"
@@ -35,17 +53,30 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_encrypt"
+        app:layout_constraintTop_toBottomOf="@id/textview_encrypted_text_label"
         tools:text="Encryption Text Goes Here" />
 
     <Button
         android:id="@+id/button_decrypt"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="@string/button_decrypt_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_encrypted" />
+
+
+    <TextView
+        android:id="@+id/textview_decrypted_text_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_decrypted_text"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_decrypt" />
 
     <TextView
         android:id="@+id/textview_decrypted"
@@ -53,9 +84,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_decrypt"
+        app:layout_constraintTop_toBottomOf="@id/textview_decrypted_text_label"
         tools:text="Decryption Text Goes Here" />
-
 
 
 </android.support.constraint.ConstraintLayout>
