--- a/app/src/main/res/menu/main_activity.xml
+++ b/app/src/main/res/menu/main_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-
-        android:title="@string/menu_about_string" />
+        android:id="@+id/menu_about"
+        android:title="@string/all_about_this_app" />
 </menu>
